--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -427,7 +427,7 @@
 <script>
   mbtTOC();
 </script>
-<script>
+<!-- <script>
   function subscribeToNewsletter() {
         Swal.fire({
           title: "<strong>Subscribe to our newsletters</strong>",
@@ -451,7 +451,7 @@
       }
 
       window.onload = subscribeToNewsletter
-</script>
+</script> -->
 
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/show-language/prism-show-language.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/copy-to-clipboard/prism-copy-to-clipboard.js"></script>
