--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -214,29 +214,50 @@
     return "";
   }
 
-//   function subscribeToNewsletter() {
-//         Swal.fire({
-//           title: "<strong>Subscribe to our newsletters</strong>",
-//           icon: "info",
-//           html:
-//             '<div id="revue-embed">' +
-//             '<form action="https://digests.ireadblog.com/add_subscriber" method="post" id="revue-form" name="revue-form"  target="_blank">' +
-//             '<div class="revue-form-group form-group">' +
-//             '<input class="revue-form-field form-control" placeholder="Your email address..." type="email" name="member[email]" id="member_email" required>' +
-//             "</div>" +
-//             '<div class="revue-form-actions">' +
-//             '<input type="submit" class="btn btn-primary" value="Subscribe" name="member[subscribe]" id="member_submit">' +
-//             "</div>" +
-//             '<div class="revue-form-footer mt-3">By subscribing, you agree with Revue’s <a target="_blank" href="https://www.getrevue.co/terms">Terms of Service</a> and <a target="_blank" href="https://www.getrevue.co/privacy">Privacy Policy</a>.</div>' +
-//             "</form>" +
-//             "</div>",
-//           showCloseButton: true,
-//           showCancelButton: false,
-//           showConfirmButton: false,
-//         });
-//       }
+  function setCookie(cName, cValue, expDays) {
+        let date = new Date();
+        date.setTime(date.getTime() + (expDays * 24 * 60 * 60 * 1000));
+        const expires = "expires=" + date.toUTCString();
+        document.cookie = cName + "=" + cValue + "; " + expires + "; path=/";
+}
+  function getCookie(cName) {
+      const name = cName + "=";
+      const cDecoded = decodeURIComponent(document.cookie); //to be careful
+      const cArr = cDecoded .split('; ');
+      let res;
+      cArr.forEach(val => {
+          if (val.indexOf(name) === 0) res = val.substring(name.length);
+      })
+      return res;
+}
 
-//       window.onload = subscribeToNewsletter
+  function subscribeToNewsletter() {
+    let revueCookie = getCookie('revue');
+    if(revueCookie == null){
+        Swal.fire({
+          title: "<strong>Subscribe to our newsletters</strong>",
+          icon: "info",
+          html:
+            '<div id="revue-embed">' +
+            '<form action="https://digests.ireadblog.com/add_subscriber" method="post" id="revue-form" name="revue-form"  target="_blank">' +
+            '<div class="revue-form-group form-group">' +
+            '<input class="revue-form-field form-control" placeholder="Your email address..." type="email" name="member[email]" id="member_email" required>' +
+            "</div>" +
+            '<div class="revue-form-actions">' +
+            '<input type="submit" class="btn btn-primary" value="Subscribe" name="member[subscribe]" id="member_submit">' +
+            "</div>" +
+            '<div class="revue-form-footer mt-3">By subscribing, you agree with Revue’s <a target="_blank" href="https://www.getrevue.co/terms">Terms of Service</a> and <a target="_blank" href="https://www.getrevue.co/privacy">Privacy Policy</a>.</div>' +
+            "</form>" +
+            "</div>",
+          showCloseButton: true,
+          showCancelButton: false,
+          showConfirmButton: false,
+        });
+        setCookie('revue', true, 7);
+        }
+      }
 
-//  </script>
+      window.onload = subscribeToNewsletter
+
+ </script>
 {% endblock js_down %}
