--- a/templates/partials/like.html
+++ b/templates/partials/like.html
@@ -30,5 +30,6 @@
   aria-hidden="true"
   style="color: black"
   id="like_dislike"
-  > {{post.views}}</i
+  title="{{post.views}}"
+  > {{post.views|humanize_views}}</i
   >
