--- a/templates/partials/like.html
+++ b/templates/partials/like.html
@@ -31,5 +31,5 @@
   style="color: black"
   id="like_dislike"
   title="{{post.views}}"
-  > {{post.views|humanize_views}}</i
+  > {{post.views}}</i
   >
