--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -297,7 +297,7 @@
                     <a href="{% url 'user_post_feed' request.session.username %}" class="dropdown-item" target="_blank">
                       RSS Feed
                     </a>
-                    <a href="{% url 'stats' request.session.username %}" class="dropdown-item" target="_blank">
+                    <a href="{% url 'stats' request.session.username %}" class="dropdown-item">
                       Your Stats
                     </a>
                     <a class="dropdown-item" href="{% url 'change_password' %}"
