--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -214,26 +214,9 @@
     return "";
   }
 
-  function setCookie(cName, cValue, expDays) {
-        let date = new Date();
-        date.setTime(date.getTime() + (expDays * 24 * 60 * 60 * 1000));
-        const expires = "expires=" + date.toUTCString();
-        document.cookie = cName + "=" + cValue + "; " + expires + "; path=/";
-}
-  function getCookie(cName) {
-      const name = cName + "=";
-      const cDecoded = decodeURIComponent(document.cookie); //to be careful
-      const cArr = cDecoded .split('; ');
-      let res;
-      cArr.forEach(val => {
-          if (val.indexOf(name) === 0) res = val.substring(name.length);
-      })
-      return res;
-}
-
   function subscribeToNewsletter() {
     let revueCookie = getCookie('revue');
-    if(revueCookie == null){
+    if(revueCookie == null || revueCookie == ''){
         Swal.fire({
           title: "<strong>Subscribe to our newsletters</strong>",
           icon: "info",
