--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -230,7 +230,7 @@
               </a>
               &nbsp;
               <a
-                onclick="copyLink(`{{request.build_absolute_uri}}`, `{{shorty_api_key}}`)"
+                onclick="copyLink(`{{request.build_absolute_uri}}`)"
                 style="cursor: pointer"
                 class="copy-btn"
               >
