--- a/templates/authentication/change-password.html
+++ b/templates/authentication/change-password.html
@@ -2,51 +2,43 @@
 <section class="site-section">
   <div class="container">
     <div class="row mb-4">
-      <div class="col-md-2"></div>
-      <div class="col-md-4">
-        <center><h1>Change Password</h1></center>
+      <div class="col-md-6">
+        <h1>Change Password</h1>
       </div>
-      <div class="col-md-4"></div>
     </div>
     <div class="row blog-entries">
       <div class="col-md-12 col-lg-8 main-content">
         <form action="" method="post" id="">
           {% csrf_token %}
           <div class="row" id="beforeOldPassword">
-            <div class="col-md-4"></div>
-            <div class="col-md-4 form-group">
+            <div class="col-md-12 form-group">
               <input
                 type="password"
                 id="oldPassword"
                 name="oldPassword"
                 class="form-control"
                 placeholder="Old Password"
+                style="width:75%;"
                 required
               />
               <div
-                class="oldPasswordFeedBackArea invalid-feedback text-center mt-2"
+                class="oldPasswordFeedBackArea invalid-feedback  mt-2"
                 style="display: none"
               ></div>
             </div>
-            <div class="col-md-4"></div>
           </div>
           <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4 form-group">
-              <center>
+            <div class="col-md-12 form-group">
                 <button
                   type="button"
                   id="checkPasswordBtn"
                   class="btn btn-primary mt-2"
                   onClick="checkPwd()"
                 >Check Password</button>
-              </center>
             </div>
-            <div class="col-md-4"></div>
           </div>
           <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4 form-group" style="display: none;" id="afterOldPassword">
+            <div class="col-md-12 form-group" style="display: none;" id="afterOldPassword">
                 <input
                 type="password"
                 id="newPassword1"
@@ -56,7 +48,7 @@
                 required
               />
               <div
-                class="newPassword1FeedBackArea invalid-feedback text-center mt-2"
+                class="newPassword1FeedBackArea invalid-feedback  mt-2"
                 style="display: none"
               ></div>
                 <input
@@ -69,19 +61,16 @@
               />
               
               <div
-                class="newPassword2FeedBackArea invalid-feedback text-center mt-2"
+                class="newPassword2FeedBackArea invalid-feedback  mt-2"
                 style="display: none"
               ></div>
-              <center>
                 <input
                   type="submit"
                   id="changePasswordBtn"
                   value="Change Password"
                   class="btn btn-primary mt-4"
                 />
-              </center>
             </div>
-            <div class="col-md-4"></div>
           </div>
         </form>
       </div>
