Fix Change Password

--- a/templates/authentication/change-password.html
+++ b/templates/authentication/change-password.html
@@ -45,6 +45,7 @@
                 name="newPassword1"
                 class="form-control"
                 placeholder="New Password"
+                style="width:75%;"
                 required
               />
               <div
@@ -57,6 +58,7 @@
                 name="newPassword2"
                 class="form-control mt-4"
                 placeholder="Confirm Password"
+                style="width:75%;"
                 required
               />
               
