Add CKEditor Plugins

--- a/templates/core/new-post.html
+++ b/templates/core/new-post.html
@@ -134,7 +134,7 @@
 <script>
     CKEDITOR.replace('editor1', {
       height: 500,
-      extraPlugins: 'filebrowser, codesnippet, markdown, wordcount',
+      extraPlugins: 'filebrowser, codesnippet, markdown, wordcount, embed, autoembed, image2',
       filebrowserBrowseUrl: '{% url "ckeditor_browse" %}',
       filebrowserUploadMethod: 'form',
       filebrowserUploadUrl: '{% url "ckeditor_upload" %}'
