--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -316,7 +316,7 @@
                     href="https://digests.ireadblog.com"
                     target="_blank"
                     style="cursor: pointer"
-                    >Bulletins</a
+                    >Digests</a
                   >
                 </li>
                 <li class="nav-item">
