--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -144,8 +144,8 @@
                   </li>
                   {% else %}
                     {% if i == posts.paginator.ELLIPSIS %}
-                      <li class="page-item">
-                        <span class="page-link">{{i}}</span>
+                      <li>
+                        <span>{{i}}</span>
                       </li>
                     {% else %}
                       <li class="page-item">
