--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -254,8 +254,8 @@
                         <a class="page-link" href="">{{user_posts.number}}</a>
                       </li>
                       {% else %} {% if i == user_posts.paginator.ELLIPSIS %}
-                      <li class="page-item">
-                        <span class="page-link">{{i}}</span>
+                      <li>
+                        <span>{{i}}</span>
                       </li>
                       {% else %}
                       <li class="page-item">
