--- a/templates/core/search.html
+++ b/templates/core/search.html
@@ -90,8 +90,8 @@
                         </li>
                         {% else %}
                           {% if i == results.paginator.ELLIPSIS %}
-                            <li class="page-item">
-                              <span class="page-link">{{i}}</span>
+                            <li>
+                              <span>{{i}}</span>
                             </li>
                           {% else %}
                             <li class="page-item">
