--- a/templates/core/tag.html
+++ b/templates/core/tag.html
@@ -59,8 +59,8 @@
                         </li>
                         {% else %}
                           {% if i == posts.paginator.ELLIPSIS %}
-                            <li class="page-item">
-                              <span class="page-link">{{i}}</span>
+                            <li>
+                              <span>{{i}}</span>
                             </li>
                           {% else %}
                             <li class="page-item">
