--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -12,9 +12,19 @@
             <div class="row">
               <div class="col-md-12">
                 <p class="mb-5 text-center"><img src="{% static 'images/favicon.png' %}" alt="Image placeholder" class="img-fluid" width="202" height="202"></p>
-                <p>The best ideas can change who we are. iRead is where those ideas take shape, take off, and spark powerful conversations. We’re an open platform where readers can come to find insightful and dynamic thinking. Here, expert and undiscovered voices alike dive into the heart of any topic and bring new ideas to the surface. Our purpose is to spread these ideas and deepen understanding of the world.</p>
-                <p>We’re creating a new model for digital publishing. One that supports nuance, complexity, and vital storytelling without giving in to the incentives of advertising. It’s an environment that’s open to everyone but promotes substance and authenticity. And it’s where deeper connections forged between readers and writers can lead to discovery and growth. Together with millions of collaborators, we’re building a trusted and vibrant ecosystem fueled by important ideas and the people who think about them.</p>
+                <p>iRead is an open platform where readers find dynamic thinking, and where expert and undiscovered voices can share their writing on any topic.</p>
                 <p>Anyone can write on iRead. Thought-leaders, journalists, experts, and individuals with unique perspectives share their thinking here. You’ll find pieces by independent writers from around the globe, stories we feature and leading authors, and smart takes on our own suite of blogs and publications.</p>
+                <p>Currently,we support the following features:</p>
+                <ul>
+                  <li><u><strong class="font-weight-bold">Text Editor</strong></u>: Using our Rich Text Editor, you can add anything in your content - be it Source Code, or Images, or Videos from YouTube and Vimeo, we support everything!</li>
+                  <li><u><strong class="font-weight-bold">Category and Tags</strong></u>: Add proper category and tags to your posts to make it more discoverable</li>
+                  <li><u><strong class="font-weight-bold">Blog Series</strong></u>: If you have a large content to share, you can create a Blog series for your posts</li>
+                  <li><u><strong class="font-weight-bold">Likes and Comments</strong></u>: Logged-in users can like, comment and share your posts if they found it useful. Non-authenticated users can use Disqus commenting system.</li>
+                  <li><u><strong class="font-weight-bold">Follow Users</strong></u>: Authenticated users can follow you</li>
+                  <li><u><strong class="font-weight-bold">Twitter Bot</strong></u>: As soon as you create a post, we'll share your post on <a href="{{social_links.twitter}}" target="_blank">our Twitter handle</a> to reach more audience. Make sure you have added your Twitter username in your profile, so we can tag you too!</li>
+                  <li><u><strong class="font-weight-bold">iRead Digests</strong></u>: We use Revue to power our newsletters where we share popular and latest articles on our platform. Make sure you subscribe to our newsletter <a href="https://digests.ireadblog.com" target="_blank">here</a>.</li>
+                  <li><u><strong class="font-weight-bold">API and RSS Feed</strong></u>: We have our Public API and RSS Feed too. Check them out <a href="https://github.com/ashutoshkrris/iRead#api-documentation" target="_blank">here</a></li>
+                </ul>
                 <p>A blank page is also a door. At iRead you can walk through it. It's easy and free to share your thinking on any topic, connect with an audience, express yourself with a range of publishing tools, and even earn money for your work.</p>
                 <center><button class="btn btn-success mt-4"><a href="{% url 'new_post' %}" style="color:white;">Write on iRead</a></button></center>
               </div>
