--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -325,7 +325,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" id="sponsor" href="{% url 'dashboard' %}"
+                  <a class="nav-link" id="sponsor" href="{% url 'sponsor' %}"
                     >Sponsor</a
                   >
                 </li>
@@ -359,7 +359,7 @@
               <a href="{% url 'new_post' %}">Write on iRead</a> &bullet;
               <a href="{% url 'about' %}">About Us</a> &bullet;
               <a href="{% url 'contact' %}">Contact</a> <br />
-              <a href="{% url 'dashboard' %}">Sponsor</a> &bullet;
+              <a href="{% url 'sponsor' %}">Sponsor</a> &bullet;
               <a href="{% url 'privacy_policy' %}">Privacy Policy</a> &bullet;
               <a href="{% url 'terms_conditions' %}">T&C</a> &bullet;
               <a href="{% url 'refund_policy' %}">Refund Policy</a> &bullet;
