--- a/templates/core/sponsor.html
+++ b/templates/core/sponsor.html
@@ -12,48 +12,10 @@
         </div>
         <div class="row blog-entries">
           <div class="col-md-12 col-lg-8 main-content">
-            <form action="{% url 'dashboard' %}" method="post" id="sponsorForm">
-              {% csrf_token %}
-                  <div class="row">
-                    <div class="col-md-12 form-group">
-                      <label for="name">Name</label>
-                      <input type="text" id="name" name="name" class="form-control " required>
-                    </div>
-                    
-                    <div class="col-md-12 form-group">
-                      <label for="email">Email</label>
-                      <input type="email" id="email" name="email" class="form-control " required>
-                    </div>
-                  
-                    <div class="col-md-4 form-group">
-                      <label for="subject">Amount</label>
-                      <div class="input-group-prepend">
-                        <div class="input-group-text">₹</div>
-                      <input type="number" id="amount" name="amount" class="form-control " required>
-                      </div>
-                    </div>
-                    <div class="col-md-8 form-group" style="margin-top: 40px;">
-                        <label for="gateway" style="margin-right: 20px;">Choose Gateway</label>
-                        <label for="paytm">
-                        <input type="radio" id="paytm" name="gateway" value="paytm"> Paytm</label>
-                        <label for="razorpay">
-                        <input type="radio" id="razorpay" name="gateway" value="razorpay"> Razorpay</label>
-                    </div>
-                </div>
-                  <div class="row">
-                      <div class="col-md-4"></div>
-                    <div class="col-md-4 form-group">
-                      <center><input type="button" onClick="confirmPay()" id="sponsorBtn" value="Sponsor Now" class="btn btn-primary m-4"></center>
-                    </div>
-                    <div class="col-md-4"></div>
-                  </div>
-                </form>
-                <div class="row">
-                  <p><strong>Note : The above implementations are for Test Mode only. Please find the Test Cards and UPI Details <a href="https://razorpay.com/docs/payment-gateway/test-card-upi-details/">here</a> for Razorpay and <a href="https://developer.paytm.com/docs/test-instruments/testing-integration/">here</a> for Paytm.</strong></p>
-                  <br>
-                  <p>If you're really interested to support us, use the form below:</p>
-                  <iframe id='kofiframe' src='https://ko-fi.com/ireadblog/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px; margin-top: 20px;' height='712' title='ireadblog'></iframe>
-                </div>
+            <div class="row">
+              <p>If you're interested to support us, use the form below:</p>
+              <iframe id='kofiframe' src='https://ko-fi.com/ireadblog/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px; margin-top: 20px;' height='712' title='ireadblog'></iframe>
+            </div>
           </div>
           {% include "partials/sidebar.html" %}
         </div>
