--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -283,7 +283,7 @@
                 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
                 
                 var disqus_config = function () {
-                this.page.url = "https://iread.ga{{post.get_absolute_url}}";  // Replace PAGE_URL with your page's canonical URL variable
+                this.page.url = "https://ireadblog.com{{post.get_absolute_url}}";  // Replace PAGE_URL with your page's canonical URL variable
                 this.page.identifier = '{{post.id}}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
                 };
                 
